--- a/package.json
+++ b/package.json
@@ -12,14 +12,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
+    "@rsuite/icons": "^1.0.3",
     "axios": "^1.6.5",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
+    "redux-persist": "^6.0.0",
+    "rsuite": "^5.51.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
